<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sunset"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_label"
        android:layout_marginTop="10dip"
        android:textColor="@color/white"
        android:layout_marginBottom="5dip" />

    <EditText
        android:id="@+id/phone_text"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@id/phone_label"
        android:inputType="phone"
        android:layout_marginBottom="30dip"
        android:hint="@string/phone_hint" />
    
    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:layout_below="@id/phone_text"
        android:textColor="@color/white"
        android:layout_marginBottom="5dip" />
    
    <EditText
        android:id="@+id/password_text"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@id/password_label"
        android:inputType="textPassword"
        android:layout_marginBottom="10dip"
        android:hint="@string/password_hint" />
    
	<Button 
        android:id="@+id/login_go"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_go"
        android:layout_below="@id/password_text"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        android:layout_marginBottom="5dip"
        android:onClick="login" />
	
	<Button 
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_below="@id/login_go"
        android:background="@drawable/btn_background"
        android:onClick="register" />
	
</RelativeLayout>
