<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sunset"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChildActivity" >

    <TextView
        android:id="@+id/child_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_names"
        android:textColor="@color/white"
        android:layout_marginBottom="10dip" />
    
    <EditText
        android:id="@+id/child_names_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/child_names"
        android:layout_marginBottom="25dip" />
    
    <TextView
        android:id="@+id/child_names_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_sex"
        android:layout_marginBottom="10dip"
        android:textColor="@color/white"
        android:layout_below="@id/child_names_text" />
    
     <Spinner
        android:id="@+id/child_sex_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sex"
        android:prompt="@string/choose_sex"
        android:layout_below="@id/child_names_label"
        android:layout_marginBottom="25dip" />

     <TextView
        android:id="@+id/child_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_age"
        android:layout_marginBottom="10dip"
        android:textColor="@color/white"
        android:layout_below="@id/child_sex_text" />
     
    <EditText
        android:id="@+id/child_age_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/child_age"
        android:layout_marginBottom="25dip" />
    
    <Button 
        android:id="@+id/child_school"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@id/child_age_text"
        android:layout_alignParentRight="true"
        android:onClick="registerChild"
        android:textColor="@color/white"
        android:background="@drawable/btn_background" />
</RelativeLayout>
