<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sunset"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ParentActivity" >

    <TextView
        android:id="@+id/parent_fullnames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parent_names"
        android:textColor="@color/white"
        android:layout_marginBottom="5dip" />
    
    <EditText
        android:id="@+id/parent_fullnames_text"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:inputType="text"
        android:layout_below="@id/parent_fullnames"
        android:layout_marginBottom="10dip" />
    
    <TextView
        android:id="@+id/parent_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parent_email"
        android:layout_marginBottom="5dip"
        android:textColor="@color/white"
        android:layout_below="@id/parent_fullnames_text" />
    
    <EditText
        android:id="@+id/parent_email_text"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:inputType="textEmailAddress"
        android:layout_below="@id/parent_email_label"
        android:layout_marginBottom="10dip" />
    
     <TextView
        android:id="@+id/parent_residence_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parent_residence"
        android:layout_marginBottom="5dip"
        android:textColor="@color/white"
        android:layout_below="@id/parent_email_text" />
     
     <EditText
        android:id="@+id/parent_residence_text"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:inputType="text"
        android:layout_below="@id/parent_residence_label"
        android:layout_marginBottom="10dip" />
     
     <TextView
        android:id="@+id/parent_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parent_phone"
        android:layout_marginBottom="5dip"
        android:textColor="@color/white"
        android:layout_below="@id/parent_residence_text" />
     
     <EditText
        android:id="@+id/parent_phone_text"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:inputType="phone"
        android:layout_below="@id/parent_phone_label"
        android:layout_marginBottom="10dip" />
     
     <Button 
        android:id="@+id/parent_car"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@id/parent_phone_text"
        android:layout_alignParentRight="true"
        android:onClick="registerParent"
        android:textColor="@color/white"
        android:background="@drawable/btn_background" />
     
</RelativeLayout>
