<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sunset"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CarActivity" >

    <TextView
        android:id="@+id/car_model_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_model"
        android:textColor="@color/white"
        android:layout_marginBottom="10dip" />
    
    <EditText
        android:id="@+id/car_model_text"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@id/car_model_label"
        android:inputType="text"
        android:layout_marginBottom="25dip" />

    <TextView
        android:id="@+id/car_reg_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_model_text"
        android:text="@string/car_reg"
        android:textColor="@color/white"
        android:layout_marginBottom="10dip" />
    
    <EditText
        android:id="@+id/car_reg_text"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@id/car_reg_label"
        android:inputType="text"
        android:layout_marginBottom="25dip" />
    
    <TextView
        android:id="@+id/car_cap_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_reg_text"
        android:text="@string/car_cap"
        android:textColor="@color/white"
        android:layout_marginBottom="10dip" />
    
    <EditText
        android:id="@+id/car_cap_text"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@id/car_cap_label"
        android:inputType="text"
        android:layout_marginBottom="25dip" />
    
    <Button 
        android:id="@+id/car_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@id/car_cap_text"
        android:layout_alignParentRight="true"
        android:onClick="registerCar"
        android:textColor="@color/white"
        android:background="@drawable/btn_background" />
    
</RelativeLayout>
