<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sunset"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PasswordActivity" >

    <TextView
        android:id="@+id/set_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password_label"
        android:textColor="@color/white"
        android:layout_marginBottom="10dip" />
    
	<EditText
        android:id="@+id/set_password_text"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@id/set_password_label"
        android:inputType="textPassword"
        android:layout_marginBottom="25dip" />
	
	<TextView
        android:id="@+id/password_repeat_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_password_text"
        android:text="@string/re_type_password"
        android:textColor="@color/white"
        android:layout_marginBottom="10dip" />
    
    <EditText
        android:id="@+id/repeat_password_text"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@id/password_repeat_lbl"
        android:inputType="textPassword"
        android:layout_marginBottom="25dip" />
    
    <Button 
        android:id="@+id/parent_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@id/repeat_password_text"
        android:layout_alignParentRight="true"
        android:onClick="registerParent"
        android:textColor="@color/white"
        android:background="@drawable/btn_background" />
	
</RelativeLayout>
